Add 2 versions of homepage, one for pre event, one for post event. Update pre event content for 2019

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -306,9 +306,18 @@ em label {
   color: #005088;
   text-align: center;
   position: relative;
-  bottom: 35px;
+  bottom: 12px;
   font-weight: bold;
   font-size: 34px;
+}
+
+.sub-header {
+  color: #005088;
+  text-align: center;
+  position: relative;
+  bottom: 24px;
+  font-weight: bold;
+  font-size: 18px;
 }
 
 .result {
