--- a/app/views/welcome/live_index.html.erb
+++ b/app/views/welcome/live_index.html.erb
@@ -5,8 +5,8 @@
     </div>
   <% end %>
   <h1 class="main-header">Welcome to the INCS Online Resume Bank.</h1>
-  <h1 class="main-header">Please join us at the 2019 INCS Teacher & Administrator Job Fair on March 9!</h1>
-  <h3 class="sub-header">Register for the Job Fair and Resume Bank below.</h3>
+  <hi class="main-header">Please join us at the 2019 INCS Teacher & Administrator Job Fair on March 9!</h1>
+<h3 class="sub-header">Register for the Job Fair and Resume Bank below.</h3>
 
 
   <% if session[:user_id] != nil && User.find(session[:user_id]).access == 'pending' %>
