--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -119,7 +119,7 @@
   <div class="field">
     <label><em class="label-bold">Which field(s) does your desired position fall under? (Check all that apply) *</em></label><br>
     <ul class="checkbox-grid2">
-    <% position_options.sort.each do |pos| %>
+    <% position_options.each do |pos| %>
       <% if @user.positions.map{|pos| pos.title}.include?(pos) %>
         <li class="field-flex"><input type="checkbox" name="positions[]" value="<%= pos %>" checked/>
       <% else %>
