--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -20,7 +20,7 @@
     </div>
   <% end %>
 
-  <% if session[:user_id] != nil && User.find(session[:user_id]).access == 'teacher' && User.find(session[:user_id]).register2017 == 'bank' %>
+  <% if session[:user_id] != nil && User.find(session[:user_id]).access == 'teacher' && !User.find(session[:user_id]).register2019 %>
     <div class="main-container">
     <%= button_to "Register for Job Fair", users_register_path, method: :post, class: "btn btn-info main-btn" %>
     </div>
