--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -289,6 +289,7 @@ em label {
   justify-content: space-around;
   font-size: 45px;
   background-color: #fff;
+  margin-bottom: 16px;
 }
 
 .main-btn {
