Add register question

--- a/app/views/users/_teacher_form.html.erb
+++ b/app/views/users/_teacher_form.html.erb
@@ -13,6 +13,22 @@
 
   <h3>Please fill out the form below and select "Next" at the bottom to upload your resume and complete your registration as a Candidate.</h3><br>
 
+  <div class="field">
+    <label><em class="label-bold">What would you like to do? *</em></label><br>
+    <div class="field-radio">
+      <%= f.radio_button(:register2019, "bank") %>
+      <%= f.label(:name, "I would like to add my resume to the INCS Online Resume Bank only.", class: 'flex-one') %><br>
+    </div>
+    <div class="field-radio">
+      <%= f.radio_button(:register2019, "both") %>
+      <%= f.label :name, class: 'flex-one' do "I would like to add my resume to the INCS Online Resume Bank AND would like this to serve as my registration for the #{link_to('2019 Teacher Job Fair', 'https://www.incschools.org/events/tjf/')}.".html_safe  end%>
+    </div>
+    <div class="field-radio">
+      <%= f.radio_button(:register2019, "jobfaironly") %>
+      <%= f.label(:name, "I would only like to register for the 2019 Teacher Job Fair and would NOT like my resume to be added to the INCS Online Resume Bank for charter school leaders to see. Note: your resume is required in order to register you for the fair, but we will not include it in our online database if you select this option.", class: 'flex-one') %>
+    </div>
+  </div>
+
   <%= f.hidden_field :access, value: "teacher" %>
   <% if @resume != nil %><input type="hidden" name="resume_id" value="<%= @resume.id %>" /><% end %>
   <div class="field field-flex">
