--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -435,7 +435,37 @@ em label {
   display: -o-flex;
   display: flex;
   position: relative;
+  align-items: center;
+  margin-bottom: 5px;
+}
+
+.field-label {
+  font-weight: 500;
+  margin-bottom: 8px;
+  text-decoration: underline;
+}
+
+.field-radio-indent {
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: -o-flex;
+  display: flex;
+  position: relative;
   left: 40px;
+  align-items: center;
+  margin-bottom: 5px;
+}
+
+.field-radio-indent-other {
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: -o-flex;
+  display: flex;
+  position: relative;
+  left: 40px;
+  top: -12px;
   align-items: center;
   margin-bottom: 5px;
 }
@@ -452,6 +482,33 @@ em label {
   margin: 0;
   margin-right: 4px;
 }
+
+.field-radio-indent input[type="radio"], input[type="checkbox"], input[type="text"] {
+  margin: 0px 4px 0px 0px;
+}
+.field-radio-indent input[type="radio"], input[type="checkbox"] {
+  margin: 0px 4px 0px 0px;
+  height: 12px;
+}
+
+.field-radio-indent label {
+  margin: 0;
+  margin-right: 4px;
+}
+
+.field-radio-indent-other input[type="radio"], input[type="checkbox"], input[type="text"] {
+  margin: 0px 4px 0px 0px;
+}
+.field-radio-indent-other input[type="radio"], input[type="checkbox"] {
+  margin: 0px 4px 0px 0px;
+  height: 12px;
+}
+
+.field-radio-indent-other label {
+  margin: 0;
+  margin-right: 4px;
+}
+
 .select-label {
   margin-top: 5px;
   width: 36%;
