--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -15,7 +15,7 @@
 
   <% if session[:user_id] == nil %>
     <div class="main-container">
-      <%= button_to "Candidate Registration", users_new_teacher_path, method: :get, class: "btn btn-info main-btn"%>
+      <%= button_to "Job Seeker Registration", users_new_teacher_path, method: :get, class: "btn btn-info main-btn"%>
       <%= button_to "Hiring Manager Registration", users_new_school_path, method: :get, class: "btn btn-info main-btn"%>
     </div>
   <% end %>
@@ -28,12 +28,12 @@
 
   <p class="main-content">
     <p class="main-content">
-    The Illinois Network of Charter Schools (INCS) will host its 14th annual Teacher & Administrator Job Fair on <span class="boldBig">Saturday, April 6, 2019</span>. Representatives from charter public schools across Illinois will be recruiting hundreds of teachers, social workers, counselors, nurses, and school administrators. INCS seeks highly qualified candidates who are excited to work in a mission-driven environment and are ready to TEACH, LEAD, and SUCCEED. To register for the job fair and upload your resume into our year-round database, please select “Candidate Registration” above.
+    The Illinois Network of Charter Schools (INCS) will host the Teacher & Administrator Job Fair on <span class="boldBig">Saturday, April 6, 2019</span>. Representatives from charter public schools across Illinois will be recruiting hundreds of teachers, social workers, counselors, nurses, and school administrators. INCS seeks highly-qualified candidates who are excited to work in a mission-driven environment and are ready to TEACH, LEAD, and SUCCEED. To register for the job fair and upload your resume into our year-round database, please select “Job Seeker Registration” above.
     </p>
     <br>
 
     <p class="main-content">
-      <strong>Teachers and Administrators will have the opportunity to:</strong>
+      <strong>Job Seekers will have the opportunity to:</strong>
       <ul class="main-content-list">
         <li>Meet recruiters from over 50 charter public schools.</li>
         <li>Post your resume in the INCS Online Resume Bank, which is circulated to Illinois charter school hiring
@@ -47,36 +47,37 @@ managers year-round.</li>
       <ul class="main-content-list">
         <li>Meet with hundreds of educators.</li>
         <li>View candidates’ resumes ahead of time using the INCS Online Resume Bank.</li>
-        <li>Invite candidates for on-site interviews following the meet-and- greet portion of the event.</li>
+        <li>Invite candidates for on-site interviews following the meet-and-greet portion of the event.</li>
         <%# <li>School leaders may learn more about the fair and register <a href="https://www.incschools.org/events/tjf/">here</a></li> %>
       </ul>
     </p>
 
     <p class="main-content"><strong>Agenda:</strong></p>
     <ul class="main-content-list">
-      <li>8:30 am -9:30 am: School table set-up</li>
-      <li>9:15 am - 10:00 am: Candidate registration</li>
-      <li>10:00 am - 12:00 pm: Meet and Greet with candidates and schools</li>
-      <li>12:00 pm - 1:30 pm: On-site teacher interviews (by invitation from charter school leaders only*)</li>
+      <li>9:00 am - 9:30 am: School set-up</li>
+      <li>9:15 am - 10:00 am: Job Seeker registration</li>
+      <li>10:00 am - 12:00 pm: Meet-and-Greet between Job Seekers and Schools</li>
+      <li>12:00 pm - 1:30 pm: On-site Interviews (by invitation from charter school leaders only*)</li>
     </ul>
 
     <p class="main-content">
-    * Interviews are conducted at the discretion of charter school leaders, who may contact teachers in advance or invite them in person after the Meet-and-Greet portion of the fair. INCS does not have any additional information to share with candidates at this time.
+    *Interviews are conducted at the discretion of charter school leaders, who may contact job seekers in advance or invite them in person after the Meet-and-Greet portion of the fair. INCS does not have any additional information to share regarding interviews.
     </p>
 
-    <%# <p class="main-content"><strong>Location:</strong></p> %>
-    <%# <p class="main-content"> %>
-    <%#   <a href="http://pcsedu.org/MSA/about/location">Perspectives/IIT Math & Science Academy: 3663 South Wabash Avenue, Chicago, IL, 60653</a> %>
-    <%# </p> %>
+    <p class="main-content"><strong>Location:</strong></p>
+    <p class="main-content">
+      ITW David Speer Academy, a campus of the Noble Network of Charter Schools
+      5321 W. Grand Ave, Chicago, IL 60639
+    </p>
 
     <p class="main-content"><strong>Parking:</strong></p>
     <p class="main-content">
-      Parking is limited and public transportation is encouraged.
+      Parking is available on Grand Avenue and in the Prosser Career Academy parking lot, across from Speer Academy. 
     </p>
     <br>
 
     <p class="main-content">
-      Did you know INCS also has a <span class="bold">jobs board</span>? <a href="https://www.incschools.org/jobs/jobs-at-charter-schools/">Click here</a> to browse current openings in Illinois charter public schools.
+      Did you know INCS also has a <span class="bold">jobs board</span>? <a href="https://www.incschools.org/jobs-at-charter-schools/">Click here</a> to browse current openings in Illinois charter public schools.
     </p>
 
     <p class="main-content">
@@ -84,12 +85,12 @@ managers year-round.</li>
     </p>
 
     <p class="main-content">
-      If you have any questions about this registration and resume bank or would like to receive outreach materials, please contact Anne Levy Brown, INCS Charter Growth Manager, at <%=mail_to("alevybrown@incschools.org")%>
+      If you have questions or would like to receive outreach materials, please contact Anne Levy Brown, INCS Charter Growth Manager, at <%=mail_to("alevybrown@incschools.org")%>
     </p>
   </p>
 
   <p class="main-content grayed">
-    ABOUT INCS: The Illinois Network of Charter Schools (INCS) advocates for the improvement of public education by leveraging the charter school model as a catalyst to transform lives and communities. INCS works to ensure that charter public schools have adequate and equitable resources, the autonomy to find innovative approaches to meet student needs, and a fair and transparent policy landscape that allows high-quality options to thrive. As the voice of Illinois charter schools, INCS engages a diverse coalition of policymakers, school leaders, parents, and community members to create systemic change and secure high-quality schools for undeserved communities. Learn more about us <a target="_blank" href="https://www.incschools.org/">here</a>. 
+    ABOUT INCS: The Illinois Network of Charter Schools (INCS) advocates for the improvement of public education by leveraging the charter school model as a catalyst to transform lives and communities. INCS works to ensure that charter public schools have adequate and equitable resources, the autonomy to find innovative approaches to meet student needs, and a fair and transparent policy landscape that allows high-quality options to thrive. As the voice of Illinois charter schools, INCS engages a diverse coalition of policymakers, school leaders, parents, and community members to create systemic change and secure high-quality schools for underserved communities. Learn more about us <a target="_blank" href="https://www.incschools.org/">here</a>. 
   </p>
 
 
